Correct Java version